[tool.poetry]
name = "gr-tk"
version = "0.1.0"
description = "Gerenciamento de risco - tool kit para CLI"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gr = "gr_tk.gr:cli"
