[tool.poetry]
name = "gr-trading"
version = "0.2.1"
description = "Comandos para cálculos de gerenciamento de risco no trading"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gr = "gr_trading.gr:cli"
